# dialogue-summarizer

./: .gitignore  00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_PREVIOUS_CONTEXT.md  02_USAGE_GUIDE.md  03_SESSION_HANDOVER.md  04_CODING_STANDARDS.md  04_SESSION_HANDOVER_2.md  04_SESSION_HANDOVER_JULY30.md  05_SESSION_HANDOVER.md  README.md  USAGE_GUIDE.md  debug5.csv  debug_generation.py  environment.bk.yml  environment.yml  korean_dialogue_eda.py  pyproject.toml  requirements.txt  subission11.csv  subission12w.csv  subission1w.csv  submission.csv  submission1.csv
configs/: config-base.yaml  config-baseline-centralized.bk.yaml  config-baseline-centralized.yaml  config-baseline.yaml  config-improvements.yaml  config.yaml  kobart-base-v2.yaml
configs/dataset/: dialogue_data.yaml
configs/experiment/: aggressive.yaml  baseline.yaml  context_aware_korean.yaml  debug.yaml  diagnostics.yaml  emergency_fix.yaml  emergency_fix_v2.yaml  production.yaml  quick_fix.yaml  summarization_fix.yaml  swap_regular_names.yaml  swap_unbiased_speaker.yaml  topic_aware_advanced.yaml
configs/experiments/: baseline.yaml
configs/inference/: generation-baseline.yaml  generation.yaml  kobart-base-v2.yaml
docs/: 00_project_introduction.md  01_data_overview.txt  02_test_data_insights.txt  03_sample_data.md  04_system_information.txt
scripts/: analyze_data.py  create_submission.py  debug_pipeline.py  evaluate.py  inference.py  train.py  validate_code.py
tests/: debug_checkpoint_metrics.py  debug_corruption.py  debug_model.py  debug_tokenizer.py  validate_postprocessing.py
(+67 files in other folders)
